[tool.poetry]
name = "src"
version = "0.1.0"
description = "This tool uses Tesseract OCR, SpaCy, and Python PDF frameworks for extracting text, tables, and specific information. It integrates LLMs for advanced processing and explores OS-level optimizations for improved performance and scalability."
authors = ["Kevin Garrison <kevingarrison@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "^3.8.3"
pandas = "^2.2.3"
openai = "^1.58.1"
pytesseract = "^0.3.13"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
